<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_Nest" Id="{829630f7-c5a6-455e-94c8-ac3bd3a2a92f}">
    <Declaration><![CDATA[TYPE ST_Nest :
STRUCT
		 

	 
     bNestPartProced    : BOOL;
	 bNestPresent       : BOOL;
	 
	 bPiecePass			: BOOL;
	 bPieceReject		: BOOL;
	 bLeakPass			: BOOL;
	 bLeakReject		: BOOL;
	 
	 
	 sLeakHMI			: WSTRING;
	 sPieceHMI			: WSTRING;

	 
	 sDate				: STRING;
	 sTime				: STRING;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>